tests/golden/delayed-pool-silence/openshift-upgrade-controller/openshift-upgrade-controller/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_openshift-upgrade-controller-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: openshift-upgrade-controller-system/openshift-upgrade-controller-serving-cert
  labels:
    app.kubernetes.io/managed-by: commodore
  name: openshift-upgrade-controller-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: openshift-upgrade-controller-webhook-service
      namespace: appuio-openshift-upgrade-controller
      path: /validate-managedupgrade-appuio-io-v1beta1-upgradejobhook
  failurePolicy: Fail
  name: validate-managedupgrade-v1beta1-upgradejobhook.appuio.io
  rules:
  - apiGroups:
    - managedupgrade.appuio.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - upgradejobhooks
  sideEffects: None
