tests/golden/delayed-pool-silence/openshift-upgrade-controller/openshift-upgrade-controller/rbac.authorization.k8s.io_v1_clusterrole_openshift-upgrade-controller-metrics-reader.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: kube-rbac-proxy
    app.kubernetes.io/created-by: openshift-upgrade-controller
    app.kubernetes.io/instance: metrics-reader
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: clusterrole
    app.kubernetes.io/part-of: openshift-upgrade-controller
  name: openshift-upgrade-controller-metrics-reader
rules:
- nonResourceURLs:
  - /metrics
  verbs:
  - get
