tests/golden/delayed-pool-silence/openshift-upgrade-controller/openshift-upgrade-controller/rbac.authorization.k8s.io_v1_clusterrole_openshift-upgrade-controller-proxy-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: kube-rbac-proxy
    app.kubernetes.io/created-by: openshift-upgrade-controller
    app.kubernetes.io/instance: proxy-role
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: clusterrole
    app.kubernetes.io/part-of: openshift-upgrade-controller
  name: openshift-upgrade-controller-proxy-role
rules:
- apiGroups:
  - authentication.k8s.io
  resources:
  - tokenreviews
  verbs:
  - create
- apiGroups:
  - authorization.k8s.io
  resources:
  - subjectaccessreviews
  verbs:
  - create
