tests/golden/delayed-pool-silence/openshift-upgrade-controller/openshift-upgrade-controller/rbac.authorization.k8s.io_v1_clusterrolebinding_openshift-upgrade-controller-metrics-auth-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
  name: openshift-upgrade-controller-metrics-auth-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: openshift-upgrade-controller-metrics-auth-role
subjects:
- kind: ServiceAccount
  name: openshift-upgrade-controller-controller-manager
  namespace: appuio-openshift-upgrade-controller
