tests/golden/delayed-pool-silence/openshift-upgrade-controller/openshift-upgrade-controller/rbac.authorization.k8s.io_v1_clusterrolebinding_openshift-upgrade-controller-proxy-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/component: kube-rbac-proxy
    app.kubernetes.io/created-by: openshift-upgrade-controller
    app.kubernetes.io/instance: proxy-rolebinding
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: clusterrolebinding
    app.kubernetes.io/part-of: openshift-upgrade-controller
  name: openshift-upgrade-controller-proxy-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: openshift-upgrade-controller-proxy-role
subjects:
- kind: ServiceAccount
  name: openshift-upgrade-controller-controller-manager
  namespace: appuio-openshift-upgrade-controller
