tests/golden/delayed-pool-silence/openshift-upgrade-controller/openshift-upgrade-controller/rbac.authorization.k8s.io_v1_role_openshift-upgrade-controller-leader-election-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  labels:
    app.kubernetes.io/component: rbac
    app.kubernetes.io/created-by: openshift-upgrade-controller
    app.kubernetes.io/instance: leader-election-role
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: role
    app.kubernetes.io/part-of: openshift-upgrade-controller
  name: openshift-upgrade-controller-leader-election-role
  namespace: appuio-openshift-upgrade-controller
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - get
  - list
  - watch
  - create
  - update
  - patch
  - delete
- apiGroups:
  - coordination.k8s.io
  resources:
  - leases
  verbs:
  - get
  - list
  - watch
  - create
  - update
  - patch
  - delete
- apiGroups:
  - ""
  resources:
  - events
  verbs:
  - create
  - patch
