tests/golden/delayed-pool-silence/openshift-upgrade-controller/openshift-upgrade-controller/v1_namespace_appuio-openshift-upgrade-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: node-role.kubernetes.io/infra=
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/created-by: openshift-upgrade-controller
    app.kubernetes.io/instance: system
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: namespace
    app.kubernetes.io/part-of: openshift-upgrade-controller
    control-plane: controller-manager
    openshift.io/cluster-monitoring: "true"
  name: appuio-openshift-upgrade-controller
